src/tests/snapshots/funky__tests__wat__br_table_value.snap
---
source: src/tests/wat.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module_instance: ModuleInstance {
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 12,
                        instruction: OP_I32_CONST(
                            1,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 13,
                        instruction: OP_BLOCK(
                            ValueType(
                                I32,
                            ),
                            CodeBlock {
                                id: 2,
                                instructions: [
                                    InstructionWrapper {
                                        instruction_id: 7,
                                        instruction: OP_I32_CONST(
                                            2,
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 8,
                                        instruction: OP_DROP,
                                    },
                                    InstructionWrapper {
                                        instruction_id: 9,
                                        instruction: OP_BLOCK(
                                            ValueType(
                                                I32,
                                            ),
                                            CodeBlock {
                                                id: 1,
                                                instructions: [
                                                    InstructionWrapper {
                                                        instruction_id: 1,
                                                        instruction: OP_I32_CONST(
                                                            4,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 2,
                                                        instruction: OP_DROP,
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 3,
                                                        instruction: OP_I32_CONST(
                                                            8,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 4,
                                                        instruction: OP_BR(
                                                            1,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 5,
                                                        instruction: OP_I32_CONST(
                                                            1,
                                                        ),
                                                    },
                                                    InstructionWrapper {
                                                        instruction_id: 6,
                                                        instruction: OP_BR_TABLE(
                                                            [],
                                                            0,
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                    InstructionWrapper {
                                        instruction_id: 10,
                                        instruction: OP_DROP,
                                    },
                                    InstructionWrapper {
                                        instruction_id: 11,
                                        instruction: OP_I32_CONST(
                                            16,
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 14,
                        instruction: OP_I32_ADD,
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [],
                return_types: [
                    I32,
                ],
            },
        ],
        func_addrs: [
            FuncAddr(
                0,
            ),
        ],
        table_addrs: [],
        mem_addrs: [],
        global_addrs: [],
        exports: [
            ExportInstance {
                name: "nested-br_table-value",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 12,
                            instruction: OP_I32_CONST(
                                1,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 13,
                            instruction: OP_BLOCK(
                                ValueType(
                                    I32,
                                ),
                                CodeBlock {
                                    id: 2,
                                    instructions: [
                                        InstructionWrapper {
                                            instruction_id: 7,
                                            instruction: OP_I32_CONST(
                                                2,
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 8,
                                            instruction: OP_DROP,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 9,
                                            instruction: OP_BLOCK(
                                                ValueType(
                                                    I32,
                                                ),
                                                CodeBlock {
                                                    id: 1,
                                                    instructions: [
                                                        InstructionWrapper {
                                                            instruction_id: 1,
                                                            instruction: OP_I32_CONST(
                                                                4,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 2,
                                                            instruction: OP_DROP,
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 3,
                                                            instruction: OP_I32_CONST(
                                                                8,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 4,
                                                            instruction: OP_BR(
                                                                1,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 5,
                                                            instruction: OP_I32_CONST(
                                                                1,
                                                            ),
                                                        },
                                                        InstructionWrapper {
                                                            instruction_id: 6,
                                                            instruction: OP_BR_TABLE(
                                                                [],
                                                                0,
                                                            ),
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                        InstructionWrapper {
                                            instruction_id: 10,
                                            instruction: OP_DROP,
                                        },
                                        InstructionWrapper {
                                            instruction_id: 11,
                                            instruction: OP_I32_CONST(
                                                16,
                                            ),
                                        },
                                    ],
                                },
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 14,
                            instruction: OP_I32_ADD,
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [
            Value(
                I32(
                    9,
                ),
            ),
        ],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        14,
    ),
}
